--- a/style.css
+++ b/style.css
@@ -1,39 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 
-.container
-{
+.container{
     font-family: 'Raleway', sans-serif;
     
 }
-body
-{
+body{
     padding: 0 30px;
     margin: 0;
 }
 
-header
-{
+header{
 display: flex;
 justify-content: space-between;
+align-items: center;
 padding: 0;
-margin: 0px;
+margin: 0;
 }
-.header-nav ul
-{
+.header-nav ul{
     display: flex;
     list-style-type: none;
     margin: 0;
-    padding: 0px; 
+    padding: 0; 
     line-height: 15px;
 }
-.header-nav li
-{
+.header-nav li{
     display: flex;
     padding: 0 15px;
    
 }
-.header-nav a
-{
+.header-nav a{
    color:#0065FC;
    font-size: 1em;
    text-decoration: none;
@@ -41,30 +36,24 @@ margin: 0px;
    border-top: transparent 2px solid;
    line-height: 50px;
 }
-.header-nav a:hover
-{
+.header-nav a:hover{
     color: grey;
     font-size: 1.1em;
     text-decoration: none;
     padding-top: 15px;
     border-top: #0065FC 2px solid;
 }
-.inscription
-{
+.inscription{
     font-weight: bold;
 }
-
-.logo-desktop
-{
- padding-top: 30px;
+.search-bar{
+    margin-bottom: 20px;
 }
-.search
-{
+.search{
     display: flex;
     padding: 5px 5px;
 }
-.icon-left
-{
+.icon-left{
  border-top: 2px solid #F2F2F2;
  border-bottom: 2px solid #F2F2F2;
  border-left: 2px solid #F2F2F2;
@@ -74,20 +63,18 @@ margin: 0px;
  padding: 6px 15px;
  background-color: #F2F2F2;
 }
-.searchbar
-{
+.searchbar{
     border: #F2F2F2  solid 2px;
      padding: 3px 3px;
      color: black;
 }
-::placeholder
-{
+
+::placeholder{
     color: black;
     font-weight: bold;
 
 }
-.icon-right
-{
+.icon-right{
     padding: 7px 12px;
     color: white;
     list-style: none;
@@ -97,18 +84,64 @@ margin: 0px;
     background-color:#0065FC;
     text-decoration: none;
 }
-.icon-right a
-{
+.icon-right a {
     text-decoration: none;
     color: white;
     font-weight: 600;
 }
-h3
-{
-    margin: 0px;
-    margin-top: 15px;
+.titre-search p{
+    margin: 0;
 }
-p
-{
-    margin-top: 10px;
+.titre-search h3{
+    margin: auto;
+    margin-top: 20px;
+}
+
+.filtre{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   
+}
+.block-filtre{
+    display: flex;
+    align-items: center;
+    border: #F2F2F2 2px solid;
+    border-radius: 50px;
+    padding-right: 10px;
+    
+}
+.block-icon-filtre{
+    color: #0065FC;
+    background-color:#DEEBFF;
+    padding: 5px;
+    border-radius: 50%;
+}
+.block-info{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.block-info-icon{
+    border: #F2F2F2 2px solid;
+    padding: 5px;
+    border-radius: 50%;
+    margin-right: 20px;
+
+}
+.fa-info:before{
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    color: #0065FC;
+}
+.block-info-text{
+    font-size: 15px;
+}
+.block-card-hebergement{
+    background-color:#F2F2F2 ;
+}
+.block-img{
+    width: 200px;
+    height: 200px;
 }
