--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
    
 }
 .header-nav a{
-   color:#F2F2F2;
+   color:black;
    font-size: 1em;
    text-decoration: none;
    padding-top: 15px;
@@ -41,8 +41,9 @@
     padding-top: 15px;
     border-top: #0065FC 2px solid;
 }
-.inscription{
+.inscription a{
     font-weight: bold;
+    color: #0065FC;
 }
 
 /*Section search bar*/
@@ -99,29 +100,32 @@
 }
 
 /*Section filtre*/
-
-.filtre{
+.conteneur-filtre{
     display: flex;
-    justify-content: flex-start;
     align-items: center;
-}
-.filtre-text{
-    font-weight: 800;
 }
 .block-filtre{
     display: flex;
+    margin: 10px;
     align-items: center;
-    margin: 15px;
     border: #F2F2F2 2px solid;
-    border-radius: 50px;
-    padding-right: 10px;
+    border-radius: 25px;
+    width: auto;
+    padding: 0px 10px 0 0;
 }
-.block-icon-filtre{
-    color: #0065FC;
-    background-color:#DEEBFF;
-    padding: 5px;
+.conteneur-icon-filtre{
+    color:#0065FC;
+    background-color: #DEEBFF;
     border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: #DEEBFF 2px solid;
 }
+
+
 
 /*Section icone info*/
 
@@ -131,10 +135,14 @@
     align-items: center;
 }
 .block-info-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: #F2F2F2 2px solid;
-    padding: 5px;
+    height: 23px;
+    width: 23px;
     border-radius: 50%;
-    margin-right: 20px;
+    margin-right: 8px;
 }
 .fa-info:before{
     display: flex;
@@ -205,7 +213,7 @@
     color: #0065FC;
 }
 .uncolor{
-    color:#DEEBFF ;
+    color:#cfcfd2;
 }
 .accomodation-hebergement-stars{
     line-height: 0;
