--- a/style.css
+++ b/style.css
@@ -2,17 +2,19 @@
 
 .container{
     font-family: 'Raleway', sans-serif;
-    padding: 0 30px;
-    margin: 0;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 1250px;
 }
 /*partit header de mon projet */
 
-.header-reservia{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
-    margin: 0;
+.header-reservia {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
 }
 .header-nav ul{
     display: flex;
@@ -23,7 +25,7 @@
 }
 .header-nav li{
     display: flex;
-    padding: 0 15px;
+    padding: 0 30px;
    
 }
 .header-nav a{
@@ -44,6 +46,10 @@
 .inscription a{
     font-weight: bold;
     color: #0065FC;
+}
+
+main{
+	width: 100%;
 }
 
 /*Section search bar*/
@@ -91,6 +97,10 @@
     color: white;
     font-weight: 600;
 }
+
+.titre-search{
+    margin-bottom: 20px;
+}
 .titre-search p{
     margin: 0;
 }
@@ -108,7 +118,7 @@
     display: flex;
     margin: 10px;
     align-items: center;
-    border: #F2F2F2 2px solid;
+    border:#F2F2F2 2px solid;
     border-radius: 25px;
     width: auto;
     padding: 0px 10px 0 0;
@@ -131,8 +141,8 @@
 
 .block-info{
     display: flex;
-    justify-content: flex-start;
     align-items: center;
+    margin: 30px 0;
 }
 .block-info-icon{
     display: flex;
@@ -157,178 +167,199 @@
 /*Section hebergement et hebergement populaire*/
 .hebergement{
     display: flex;
-    height: 60%;
-    width: 100%;
     justify-content: space-between;
 }
-
 .block-card-hebergement{
-    background-color: #F2F2F2 ;
-    border-radius: 25px;
-    width: 60%;
-    height: fit-content;
-    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 15px;
+    background-color: #f2f2f2;
+    height: 530px;
+    width: 65%;
+    border-radius: 15px;
 }
 .conteneur-card-hebergement{
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-}
-
-/*CSS pour la carte hebergement Desktop*/
-
-.card-hebergement{
-    background-color: white;
-    border-radius: 25px;
-    width: 250px;
-    height: 200px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: flex-start;
-    padding: 5px;
+    
 }
-.conteneur-img{
-    height: 60%;
+.card-hebergement{
+    height: 170px;
+    background-color: white;
+    border-radius: 15px;
+    padding: 4px;
+    margin: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.block-description{
+        padding-left: 8px;
+        padding-top: 5px;
+}
+.card-hebergement p,h4{
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+}
+.card-hebergement h4{
+    font-weight: bolder;
+    padding-bottom: 5px;
+}
+.accomodation-hebergement-stars{
+    align-items: flex-end;
 }
 
 .img-hebergement{
-   object-fit: cover;
-   width: 100%;
-   height: 100%;
-   border-top-left-radius: 25px;
-   border-top-right-radius: 25px;
-}
-
-.conteneur-accomodation-hebergement{
-    border-bottom-right-radius: 25px;
-    border-bottom-left-radius:25px;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding-left: 15px;
-}
-.accomodation-hebergement-text{
-    line-height: 0;
+    height: 100px;
+    width: 220px;
+    object-fit: cover;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 .color{
     color: #0065FC;
 }
 .uncolor{
-    color:#cfcfd2;
+    color: #a8a8a8;
 }
-.accomodation-hebergement-stars{
-    line-height: 0;
+.btn-afficher-plus{
+    padding: 20px 38px;
 }
 .afficher-plus{
     text-decoration: none;
-    font-weight: bold;
     color: black;
+    font-weight: 800;
 }
-/*CSS du block populaire desktop*/
-.block-card-populaire{
-    background-color: #F2F2F2;
-    border-radius: 25px;
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    padding: 15px;
+.titre-hebergement{
+    padding-left: 38px;
 }
+.titre-hebergement h3{
+    margin: 15px 0;
+}
+
 .titre-populaire{
     display: flex;
-    justify-content:space-around;
-    align-items: center;
+    justify-content: space-around;
+    align-items: center
 }
 .conteneur-card-populaire{
-    display: flex;
-    flex-direction: column;
-    
-    justify-content: space-between;
-    align-items: center;
-    height: 90%;
-    
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        height: 474px;
 }
-.img-populaire{
-    height: 110px;
-    width: 110px;
-    object-fit: cover;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-    padding: 5px;
+.block-card-populaire{
+    width: 31%;
+    background-color: #F2F2F2;
+    border-radius: 15px;
 }
 .card-populaire{
-    display:flex;
-    border-radius: 25px;
-    background-color: white;
+    display: flex;
+   align-items: center;
+   background-color: white;
+   height: 120px;
+   width: 75%;
+   border-radius: 15px;
+   padding: 4px;
+}
+.img-populaire{
+    height: 120px;
+    width: 110px;
+    object-fit: cover;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+}
+.accomodation-populaire-text h4{
+    margin-bottom: 5px;
+    font-weight: 800;
+}
+.accomodation-populaire-text p{
+    margin: 0;
+    font-weight: normal;
+
+   
 }
 .accomodation-populaire{
+    display: flex;
     flex-direction: column;
-    align-content: space-between;
+    height: 100%;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin-left: 10px;
+   
+}
+
+/* decoupage de la taille des imgs activite*/
+
+.activite{
+    display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    width: 100%;
+    margin: 50px 0;
+}
+.conteneur-activite{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
     justify-content: space-between;
 }
-.accomodation-populaire-texte{
+
+.child{
     line-height: 0;
 }
 
-/* decoupage de la taille des imgs*/
-
-.card-1 img{
+.child2 {
+    display: flex;
+    flex-direction: column;
+    height: 432px;
+    justify-content: space-between;
+    line-height: 0;
+}
+.child p{
+    font-weight: 600;
+    padding-left: 15px;
+}
+.child2 p{
+    font-weight: 600;
+    padding-left: 15px;
+}
+.img-large{
     height: 400px;
-    width: 50%;
+    width: 290px;
     object-fit: cover;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
-.card-1{
-    border-radius: 25px;
-    width: 75%;
-}
-.card-2 img{
+.img-medium{
     height: 200px;
-    width: 50%;
+    width: 290px;
     object-fit: cover;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
-.card-3 img{
-    height: 150px;
-    width: 50%;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-}
-.card-4 img{
-    height: 400px;
-    width: 75%;
+.img-small{
+    height: 120px;
+    width: 290px;
     object-fit: cover;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
-.card-5 img{
-    height: 150px;
-    width: 50%;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
+.img-small2{
+    height: 160px;
+    width: 290px;
+    object-fit: cover;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
-.card-6 img{
-    height: 150px;
-    width: 50%;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-}
-.grand-element-1{
-    display: flex;
-    align-items:flex-start;
-    justify-content: space-between;
-    width: 45%;
-}
-.grand-element-2{
-    display: flex;
-    align-items:flex-start;
-    justify-content: space-between;
-    width: 45%;
-}
-.conteneur-card-activite{
-    display: flex;
-    justify-content: space-around;
+/*partit footer*/
+footer{
+    width: 100%;
 }
 .conteneur-footer{
     display: flex;
@@ -344,5 +375,12 @@
 .conteneur-footer{
     background-color: #F2F2F2;
 }
-
-
+.left{
+    padding: 15px 0;
+}
+.middle{
+    padding: 15px 0;
+}
+.right{
+    padding: 15px 0;
+}
