--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ main{
     color: white;
     font-weight: 600;
 }
+.icon-right-mobile{
+    display: none;
+}
 
 .titre-search{
     margin-bottom: 20px;
@@ -115,7 +118,7 @@ main{
     border:#F2F2F2 2px solid;
     border-radius: 25px;
     width: auto;
-    
+    flex-wrap: wrap;
 }
 .block-filtre a{
     display: flex;
@@ -137,10 +140,18 @@ main{
     justify-content: center;
     align-items: center;
     border: #DEEBFF 2px solid;
+    position: relative;
+    left: -2px
 }
-.conteneur-text-filtre{
+.conteneur-text-filtre span{
+    font-weight: 600;
+    color: black;
+    padding: 6px;
+}
+.block-text-filtre{
     padding: 0 9px;
     color: black;
+    font-weight: 500;
 }
 /*Section icone info*/
 .block-info{
@@ -473,4 +484,30 @@ main{
     .titre-search H3{
         margin-bottom: 8px;
     }
+    /* search-bar pour mobile */
+
+    .icon-right{
+        display: none;
+    }
+    .icon-right-mobile{
+        display: flex;
+        padding: 6px 15px;
+        background-color: #0065fc;
+        border-radius: 12px;
+        position: relative;
+        left: -7px;
+    }
+    .fa-search{
+        color: white;
+    }
+
+    /* filtre pour mobile*/
+
+    .conteneur-filtre{
+        flex-wrap: wrap;
+    }
+    .block-text-filtre{
+        width: 100%;
+    }
+    
 }
