--- a/style.css
+++ b/style.css
@@ -2,14 +2,8 @@
 
 .container{
     font-family: 'Raleway', sans-serif;
-}
-main{
-    max-width: 1400px;
-    padding: 0 50px;
-}
-header{
-    max-width: 1400px;
-    padding: 0 50px;
+    width: 90%;
+    margin: auto;
 }
 /*partit header de mon projet */
 
@@ -48,9 +42,6 @@ main{
 
 /*Section search bar*/
 
-.search-bar{
-    margin-bottom: 20px;
-}
 .search{
     display: flex;
     padding: 5px 5px;
@@ -69,6 +60,7 @@ main{
     border: #F2F2F2  solid 2px;
     padding: 3px 3px;
     color: black;
+    -webkit-appearance: none;
 }
 
 ::placeholder{
