--- a/style.css
+++ b/style.css
@@ -529,6 +529,16 @@ main{
         width: 100%;
         align-items: flex-start;
     }
+    .titre-populaire{
+        width: 100%;
+        justify-content: space-between;
+    }
+    .titre-populaire h3{
+        padding-left: 10px;
+    }
+    .titre-populaire span{
+        padding-right: 10px;
+    }
     .card-populaire{
         min-width: 200px;
     }
