--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 ul li {
     list-style: none;
 }
@@ -9,7 +8,6 @@ main{
 	width: 96%;
     margin: auto;
 }
-
 /* CSS pour la partit desktop */
 
 .container{
@@ -49,9 +47,6 @@ main{
 .logo-desktop{
     padding-top: 15px;
 }
-
-
-
 /*Section search bar*/
 
 .search{
@@ -59,12 +54,8 @@ main{
     padding: 5px 5px;
 }
 .icon-left{
-    border-top: 2px solid #F2F2F2;
-    border-bottom: 2px solid #F2F2F2;
-    border-left: 2px solid #F2F2F2;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-    border-right-color: #F2F2F2;
     padding: 6px 15px;
     background-color: #F2F2F2;
 }
@@ -72,7 +63,6 @@ main{
     border: #F2F2F2  solid 2px;
     padding: 3px 3px;
     color: black;
-    -webkit-appearance: none;
 }
 
 ::placeholder{
@@ -84,7 +74,6 @@ main{
     padding: 7px 12px;
     color: white;
     list-style: none;
-    border: #0065FC solid 2px;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     background-color:#0065FC;
@@ -144,7 +133,6 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: #DEEBFF 2px solid;
     position: relative;
     left: -2px
 }
@@ -180,7 +168,7 @@ main{
     padding: 5px;
     color: #0065FC;
 }
-.block-info-text{
+.block-info-text h3{
     font-size: 15px;
 }
 
@@ -368,10 +356,10 @@ main{
     flex-wrap: wrap;
 }
 .child-1{
-    width: 22%;
+    width: 24%;
 }
 .child-2{
-    width: 22%;
+    width: 24%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -432,6 +420,7 @@ main{
 .content-footer{
     width: 20%;
     margin-right: auto;
+    padding-left: 20px;
 }
 .footer-a{
     padding-top: 10px;
@@ -629,23 +618,15 @@ main{
     }
     .card-activite-same{
         margin-bottom: 20px;
-
     }
     /* section footer pour la partit mobile*/
     .container-footer{
         flex-direction: column;
         padding-left: 20px;
+        padding-top: 20px;
     }
-    .footer-left{
-        margin: 25px 0;
-    }
-    .footer-middle{
-        margin: 0;
-        margin-bottom: 25px;
-    }
-    .footer-right{
-        margin: 0;
-        margin-bottom: 25px;
+    .content-footer{
+        width: 100%;
     }
     .footer-h3{
         margin: 0;
@@ -655,6 +636,7 @@ main{
         margin: 0;
         padding: 0;
         margin-bottom: 8px;
+        line-height: 35px;
     }
 }
 @media screen and (min-width: 650px) and (max-width:1000px)
@@ -667,7 +649,47 @@ main{
     }
     .block-card-populaire{
         width: 100%;
-        margin-bottom: 15%;
+        margin-bottom: 50px;
     }
-    
+    /* activiter pour la partit tablette */
+    .activite{
+        flex-direction: column;
+    }
+    .conteneur-activite{
+        flex-direction: column;
+        align-content: center;
+    }
+    .child-1 {
+        margin: auto;
+        width: 75%;
+    }
+    .child-2{
+        margin: auto;
+        width: 75%;
+    }
+    .img-large{
+        height: 125px;
+    }
+    .img-medium{
+        height: 125px;
+    }
+    .img-small{
+        height: 125px;
+    }
+    .img-same{
+        height: 125px;
+    }
+    .card-activite-large{
+        margin-bottom: 20px;
+    }
+    .card-activite-medium{
+        margin-bottom: 20px;
+    }
+    .card-activite-small{
+        margin-bottom: 20px;
+    }
+    .card-activite-same{
+        margin-bottom: 20px;
+    }
+
 }
